--- a/src/NzbDrone.Core/NzbDrone.Core.csproj
+++ b/src/NzbDrone.Core/NzbDrone.Core.csproj
@@ -153,6 +153,10 @@
     <Compile Include="DecisionEngine\Specifications\MultiSeasonSpecification.cs" />
     <Compile Include="DecisionEngine\Specifications\UpgradeAllowedSpecification.cs" />
     <Compile Include="Download\Clients\Transmission\TransmissionConfig.cs" />
+    <Compile Include="Download\DownloadsProcesseEvent.cs" />
+    <Compile Include="Download\DownloadProcessingService.cs" />
+    <Compile Include="Download\ProcessMonitoredDownloadsCommand.cs" />
+    <Compile Include="Download\RefreshMonitoredDownloadsCommand.cs" />
     <Compile Include="Exceptions\DownloadClientRejectedReleaseException.cs" />
     <Compile Include="Exceptions\SearchFailedException.cs" />
     <Compile Include="Download\Clients\QBittorrent\QBittorrentLabel.cs" />
@@ -392,7 +396,6 @@
     <Compile Include="DecisionEngine\Specifications\UpgradeDiskSpecification.cs" />
     <Compile Include="DiskSpace\DiskSpace.cs" />
     <Compile Include="DiskSpace\DiskSpaceService.cs" />
-    <Compile Include="Download\CheckForFinishedDownloadCommand.cs" />
     <Compile Include="Download\Clients\Blackhole\ScanWatchFolder.cs" />
     <Compile Include="Download\Clients\Blackhole\WatchFolderItem.cs" />
     <Compile Include="Download\Clients\Deluge\Deluge.cs" />
