--- a/src/NzbDrone.Core/NzbDrone.Core.csproj
+++ b/src/NzbDrone.Core/NzbDrone.Core.csproj
@@ -794,6 +794,7 @@
     <Compile Include="MediaFiles\EpisodeImport\Aggregation\Aggregators\AggregateLanguage.cs" />
     <Compile Include="MediaFiles\EpisodeImport\EpisodeTitleRequiredType.cs" />
     <Compile Include="MediaFiles\EpisodeImport\Specifications\AbsoluteEpisodeNumberSpecification.cs" />
+    <Compile Include="MediaFiles\EpisodeImport\Specifications\AlreadyImportedSpecification.cs" />
     <Compile Include="Notifications\Discord\Discord.cs" />
     <Compile Include="Notifications\Discord\DiscordColors.cs" />
     <Compile Include="Notifications\Discord\DiscordException.cs" />
